--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
     <![endif]-->
     <p>Hello World!</p>
-    <p>First coding session</p>
+    <p>First coding</p>
     <script src="" async defer></script>
   </body>
 </html>
